# ping-back

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: close-requirements-txt-depenabot.yml  requirements-autoupdate.yml
api/: app.py
public/: index.html
static/: index.html
