[tool.poetry]
name = "ping-back"
version = "1.0.0"
description = "ping-back API hosted by Divide Projects!"
authors = ["Divanshu Chauhan <divkix@divkix.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
gunicorn = "^20.1.0"
uvicorn = "^0.23.0"
requests = "^2.31.0"
prettyconf = "^2.2.1"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
pyclean = "^2.7.3"
pylint = "^2.17.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
